--- a/01_Interfaces/FOPS.Blazor/Pages/k8s/single/Deploy.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/k8s/single/Deploy.razor
@@ -3,9 +3,11 @@
 @using FOPS.Application.Build.Cluster.Entity
 @using FOPS.Application.Build
 @using FS.Extends
-@inject IIocManager _iocManager;
-@inject NavigationManager nav;
-@inject IJSRuntime js;
+
+@inject NavigationManager Nav;
+@inject IJSRuntime Js;
+@inject ClusterApp ClusterApp;
+@inject KubectlSetYamlApp KubectlSetYamlApp;
 
 <div class="layui-card">
     <div class="layui-card-header">
@@ -55,24 +57,23 @@
         _isFirst = true;
 
     // 集群
-        _lstCluster = await _iocManager.Resolve<ClusterApp>().ToListAsync() ?? new();
+        _lstCluster = await ClusterApp.ToListAsync() ?? new();
         if (_lstCluster.Count > 0) _selectClusterId = _lstCluster[0].Id;
     }
 
     private async Task DeployAsync()
     {
-        var load = await js.InvokeAsync<int>("layer.load", 0, "{shade: false}");
+        var load = await Js.InvokeAsync<int>("layer.load", 0, "{shade: false}");
         var clusterVO = _lstCluster.Find(o => o.Id == _selectClusterId);
         if (clusterVO == null)
         {
-            await js.InvokeVoidAsync("layer.alert", "请先选择集群环境", new
+            await Js.InvokeVoidAsync("layer.alert", "请先选择集群环境", new
             {
                 icon = 0
             });
             return;
         }
 
-        var kubectlSetYamlApp = _iocManager.Resolve<KubectlSetYamlApp>();
         try
         {
             var lstLog = new List<string>();
@@ -81,15 +82,15 @@
                 lstLog.Add(log);
             });
 
-            var execSuccess = await kubectlSetYamlApp.DeployAsync(clusterVO, _yaml, progress);
+            var execSuccess = await KubectlSetYamlApp.DeployAsync(clusterVO, _yaml, progress);
             if (!execSuccess)
-                await js.InvokeVoidAsync("layer.alert", lstLog.ToString("<br />"), new
+                await Js.InvokeVoidAsync("layer.alert", lstLog.ToString("<br />"), new
                 {
                     icon = 2,
                     title = "出错了"
                 });
             else
-                await js.InvokeVoidAsync("layer.msg", lstLog.ToString("<br />"), new
+                await Js.InvokeVoidAsync("layer.msg", lstLog.ToString("<br />"), new
                 {
                     icon = 1,
                     title = "执行结果"
@@ -97,18 +98,18 @@
         }
         catch (Exception e)
         {
-            await js.InvokeVoidAsync("layer.alert", e.Message, new
+            await Js.InvokeVoidAsync("layer.alert", e.Message, new
             {
                 icon = 2,
                 title = "出错了"
             });
         }
-        await js.InvokeVoidAsync("layer.close", load);
+        await Js.InvokeVoidAsync("layer.close", load);
     }
 
     private void GotoList()
     {
-        nav.NavigateTo("/k8s/deploy/list");
+        Nav.NavigateTo("/k8s/deploy/list");
     }
 
 }
