--- a/01_Interfaces/FOPS.Blazor/Pages/project/Add.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/project/Add.razor
@@ -14,9 +14,15 @@
 @using FOPS.Application.Build.DockerHub.Entity
 @using FOPS.Application.Build.Git
 @using FOPS.Application.Build.DockerfileTpl
-@inject IIocManager _iocManager;
-@inject NavigationManager _nav;
-@inject IJSRuntime _js;
+
+@inject NavigationManager Nav;
+@inject IJSRuntime Js;
+@inject ProjectGroupApp ProjectGroupApp;
+@inject GitApp GitApp;
+@inject DockerfileTplApp DockerfileTplApp;
+@inject ProjectApp ProjectApp;
+@inject DockerHubApp DockerHubApp;
+@inject YamlTplApp YamlTplApp;
 
 <div class="layui-row layui-col-space15">
 <div class="layui-col-md6">
@@ -275,14 +281,14 @@
         if (_isFirst) return;
         _isFirst = true;
 
-        _lstGroup = await _iocManager.Resolve<ProjectGroupApp>().ToListAsync() ?? new();
-        _lstGit = await _iocManager.Resolve<GitApp>().ToListAsync() ?? new();
+        _lstGroup = await ProjectGroupApp.ToListAsync() ?? new();
+        _lstGit = await GitApp.ToListAsync() ?? new();
         _selectGits = _lstGit.ToDictionary(o => o.Id, _ => false);
-        _lstDockerfileTpl = await _iocManager.Resolve<DockerfileTplApp>().ToListAsync() ?? new();
-        _lstDockerHub = await _iocManager.Resolve<DockerHubApp>().ToListAsync() ?? new();
+        _lstDockerfileTpl = await DockerfileTplApp.ToListAsync() ?? new();
+        _lstDockerHub = await DockerHubApp.ToListAsync() ?? new();
 
     // 模板
-        _lstTpl = await _iocManager.Resolve<YamlTplApp>().ToListAsync() ?? new();
+        _lstTpl = await YamlTplApp.ToListAsync() ?? new();
         _lstTpl = _lstTpl.OrderByDescending(o => o.Id).ToList();
 
         _info.GroupId = (_lstGroup.FirstOrDefault()?.Id).GetValueOrDefault();
@@ -301,16 +307,16 @@
             }
 
             _info.DependentGitIds = _selectGits.Where(o => o.Value).Select(o => o.Key).ToList();
-            await _iocManager.Resolve<ProjectApp>().AddAsync(_info);
-            await _js.InvokeVoidAsync("layer.msg", "添加成功", new
+            await ProjectApp.AddAsync(_info);
+            await Js.InvokeVoidAsync("layer.msg", "添加成功", new
             {
                 icon = 1
             });
-            _nav.NavigateTo("/project/list");
+            Nav.NavigateTo("/project/list");
         }
         catch (Exception e)
         {
-            await _js.InvokeVoidAsync("layer.alert", e.Message, new
+            await Js.InvokeVoidAsync("layer.alert", e.Message, new
             {
                 icon = 2,
                 title = "出错了"
@@ -320,12 +326,12 @@
 
     private void GotoList()
     {
-        _nav.NavigateTo("/project/list");
+        Nav.NavigateTo("/project/list");
     }
 
     private async Task ShowEnvTips()
     {
-        await _js.InvokeVoidAsync("layer.open", new
+        await Js.InvokeVoidAsync("layer.open", new
         {
             type = 1,
             skin = "layui-layer-molv",
