--- a/01_Interfaces/FOPS.Blazor/Pages/admin/Add.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/admin/Add.razor
@@ -2,9 +2,10 @@
 @using Microsoft.AspNetCore.Components
 @using FOPS.Application.Sys.Admin
 @using FOPS.Application.Sys.Admin.Entity
-@inject IIocManager _iocManager;
-@inject NavigationManager nav;
-@inject IJSRuntime js;
+
+@inject NavigationManager Nav;
+@inject IJSRuntime Js;
+@inject AdminApp AdminApp;
 
 <div class="layui-card">
     <div class="layui-card-header">
@@ -53,8 +54,8 @@
     {
         try
         {
-            await _iocManager.Resolve<AdminApp>().AddAsync(_info);
-            await js.InvokeVoidAsync("layer.msg", "添加成功", new
+            await AdminApp.AddAsync(_info);
+            await Js.InvokeVoidAsync("layer.msg", "添加成功", new
             {
                 icon = 1
             });
@@ -62,7 +63,7 @@
         }
         catch (Exception e)
         {
-            await js.InvokeVoidAsync("layer.alert", e.Message, new
+            await Js.InvokeVoidAsync("layer.alert", e.Message, new
             {
                 icon = 2,
                 title = "出错了"
@@ -72,6 +73,6 @@
 
     private void GotoList()
     {
-        nav.NavigateTo("/admin/list");
+        Nav.NavigateTo("/admin/list");
     }
 }
