--- a/01_Interfaces/FOPS.Blazor/Pages/admin/Update.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/admin/Update.razor
@@ -2,9 +2,10 @@
 @using Microsoft.AspNetCore.Components
 @using FOPS.Application.Sys.Admin
 @using FOPS.Application.Sys.Admin.Entity
-@inject IIocManager _iocManager;
-@inject NavigationManager nav;
-@inject IJSRuntime js;
+
+@inject NavigationManager Nav;
+@inject IJSRuntime Js;
+@inject AdminApp AdminApp;
 
 <div class="layui-card">
     <div class="layui-card-header">
@@ -89,8 +90,8 @@
     {
         try
         {
-            await _iocManager.Resolve<AdminApp>().UpdateAsync(_info);
-            await js.InvokeVoidAsync("layer.msg", "修改成功", new
+            await AdminApp.UpdateAsync(_info);
+            await Js.InvokeVoidAsync("layer.msg", "修改成功", new
             {
                 icon = 1
             });
@@ -98,7 +99,7 @@
         }
         catch (Exception e)
         {
-            await js.InvokeVoidAsync("layer.alert", e.Message, new
+            await Js.InvokeVoidAsync("layer.alert", e.Message, new
             {
                 icon = 2,
                 title = "出错了"
@@ -110,7 +111,7 @@
     {
         if (Id < 1 || _info == null)
         {
-            await js.InvokeVoidAsync("layer.alert", "管理员不存在", new
+            await Js.InvokeVoidAsync("layer.alert", "管理员不存在", new
             {
                 icon = 2,
                 title = "出错了"
@@ -123,10 +124,10 @@
     {
         if (Id > 0 && _info.Id == 0)
         {
-            _info = await _iocManager.Resolve<AdminApp>().ToInfoAsync(Id);
+            _info = await AdminApp.ToInfoAsync(Id);
             if (_info == null)
             {
-                await js.InvokeVoidAsync("layer.alert", "管理员不存在", new
+                await Js.InvokeVoidAsync("layer.alert", "管理员不存在", new
                 {
                     icon = 2,
                     title = "出错了"
@@ -138,7 +139,7 @@
 
     private void GotoList()
     {
-        nav.NavigateTo("/admin/list");
+        Nav.NavigateTo("/admin/list");
     }
 
 }
