--- a/01_Interfaces/FOPS.Blazor/Pages/docker/hub/Add.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/docker/hub/Add.razor
@@ -2,9 +2,10 @@
 @using Microsoft.AspNetCore.Components
 @using FOPS.Application.Build.DockerHub.Entity
 @using FOPS.Application.Build.DockerHub
-@inject IIocManager _iocManager;
-@inject NavigationManager nav;
-@inject IJSRuntime js;
+
+@inject NavigationManager Nav;
+@inject IJSRuntime Js;
+@inject DockerHubApp DockerHubApp;
 
 <div class="layui-card">
     <div class="layui-card-header">
@@ -62,19 +63,19 @@
             {
                 throw new Exception("Git名称、托管地址必须填写。");
             }
-            await _iocManager.Resolve<DockerHubApp>().AddAsync(_info);
-            await js.InvokeVoidAsync("layer.msg", "添加成功", new {icon = 1});
+            await DockerHubApp.AddAsync(_info);
+            await Js.InvokeVoidAsync("layer.msg", "添加成功", new {icon = 1});
             GotoList();
         }
         catch (Exception e)
         {
-            await js.InvokeVoidAsync("layer.alert", e.Message, new {icon = 2, title = "出错了"});
+            await Js.InvokeVoidAsync("layer.alert", e.Message, new {icon = 2, title = "出错了"});
         }
     }
 
     private void GotoList()
     {
-        nav.NavigateTo("/docker/hub/list");
+        Nav.NavigateTo("/docker/hub/list");
     }
 
 }
