--- a/01_Interfaces/FOPS.Blazor/Pages/docker/tpl/Add.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/docker/tpl/Add.razor
@@ -2,9 +2,10 @@
 @using Microsoft.AspNetCore.Components
 @using FOPS.Application.Build.DockerfileTpl.Entity
 @using FOPS.Application.Build.DockerfileTpl
-@inject IIocManager _iocManager;
-@inject NavigationManager nav;
-@inject IJSRuntime js;
+
+@inject NavigationManager Nav;
+@inject IJSRuntime Js;
+@inject DockerfileTplApp DockerfileTplApp;
 
 <div class="layui-card">
     <div class="layui-card-header">
@@ -49,16 +50,16 @@
                 throw new Exception("Dockerfile模板名称。");
             }
 
-            await _iocManager.Resolve<DockerfileTplApp>().AddAsync(_info);
-            await js.InvokeVoidAsync("layer.msg", "添加成功", new
+            await DockerfileTplApp.AddAsync(_info);
+            await Js.InvokeVoidAsync("layer.msg", "添加成功", new
             {
                 icon = 1
             });
-            nav.NavigateTo("/docker/tpl/list");
+            Nav.NavigateTo("/docker/tpl/list");
         }
         catch (Exception e)
         {
-            await js.InvokeVoidAsync("layer.alert", e.Message, new
+            await Js.InvokeVoidAsync("layer.alert", e.Message, new
             {
                 icon = 2,
                 title = "出错了"
@@ -68,6 +69,6 @@
 
     private void GotoList()
     {
-        nav.NavigateTo("/docker/tpl/list");
+        Nav.NavigateTo("/docker/tpl/list");
     }
 }
