--- a/01_Interfaces/FOPS.Blazor/Pages/docker/tpl/Update.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/docker/tpl/Update.razor
@@ -2,9 +2,10 @@
 @using Microsoft.AspNetCore.Components
 @using FOPS.Application.Build.DockerfileTpl.Entity
 @using FOPS.Application.Build.DockerfileTpl
-@inject IIocManager _iocManager;
-@inject NavigationManager nav;
-@inject IJSRuntime js;
+
+@inject NavigationManager Nav;
+@inject IJSRuntime Js;
+@inject DockerfileTplApp DockerfileTplApp;
 
 <div class="layui-card">
     <div class="layui-card-header">
@@ -55,7 +56,7 @@
     {
         if (Id < 1 || _info == null)
         {
-            await js.InvokeVoidAsync("layer.alert", "Dockerfile模板不存在", new
+            await Js.InvokeVoidAsync("layer.alert", "Dockerfile模板不存在", new
             {
                 icon = 2,
                 title = "出错了"
@@ -64,8 +65,8 @@
         }
         try
         {
-            await _iocManager.Resolve<DockerfileTplApp>().UpdateAsync(_info);
-            await js.InvokeVoidAsync("layer.msg", "修改成功", new
+            await DockerfileTplApp.UpdateAsync(_info);
+            await Js.InvokeVoidAsync("layer.msg", "修改成功", new
             {
                 icon = 1
             });
@@ -73,7 +74,7 @@
         }
         catch (Exception e)
         {
-            await js.InvokeVoidAsync("layer.alert", e.Message, new
+            await Js.InvokeVoidAsync("layer.alert", e.Message, new
             {
                 icon = 2,
                 title = "出错了"
@@ -85,7 +86,7 @@
     {
         if (Id < 1 || _info == null)
         {
-            await js.InvokeVoidAsync("layer.alert", "Dockerfile模板不存在", new
+            await Js.InvokeVoidAsync("layer.alert", "Dockerfile模板不存在", new
             {
                 icon = 2,
                 title = "出错了"
@@ -98,10 +99,10 @@
     {
         if (Id > 0 && _info.Id == 0)
         {
-            _info = await _iocManager.Resolve<DockerfileTplApp>().ToInfoAsync(Id);
+            _info = await DockerfileTplApp.ToInfoAsync(Id);
             if (_info == null)
             {
-                await js.InvokeVoidAsync("layer.alert", "Dockerfile模板不存在", new
+                await Js.InvokeVoidAsync("layer.alert", "Dockerfile模板不存在", new
                 {
                     icon = 2,
                     title = "出错了"
@@ -113,7 +114,7 @@
 
     private void GotoList()
     {
-        nav.NavigateTo("/docker/tpl/list");
+        Nav.NavigateTo("/docker/tpl/list");
     }
 
 }
