--- a/01_Interfaces/FOPS.Blazor/Pages/git/List.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/git/List.razor
@@ -1,11 +1,13 @@
 @page "/git/list"
-@using FS.Extends
+
 @using FOPS.Application.Build.Git
 @using FOPS.Application.Build.Git.Entity
 @using FOPS.Domain.Build
-@inject IIocManager _iocManager;
-@inject NavigationManager nav;
-@inject IJSRuntime js;
+
+@inject NavigationManager Nav;
+@inject IJSRuntime Js;
+@inject GitService GitService;
+@inject GitApp GitApp;
 
 <div class="layui-card">
     <div class="layui-card-header" id="anchor-play-header">
@@ -131,13 +133,13 @@
         if (_isFirst) return;
         _isFirst = true;
 
-        _lst = await _iocManager.Resolve<GitApp>().ToListAsync();
+        _lst = await GitApp.ToListAsync();
         _totalCount = _lst.Count;
     }
 
     private void GotoAdd()
     {
-        nav.NavigateTo("/git/add");
+        Nav.NavigateTo("/git/add");
     }
 
     private async Task ClearGit(int id)
@@ -148,18 +150,18 @@
             lstLog.Add(log);
         });
 
-        var load = await js.InvokeAsync<int>("layer.load", 0, "{shade: false}");
-        var execSuccess = await _iocManager.Resolve<GitService>().ClearAsync(id, progress);
-        await js.InvokeVoidAsync("layer.close", load);
+        var load = await Js.InvokeAsync<int>("layer.load", 0, "{shade: false}");
+        var execSuccess = await GitService.ClearAsync(id, progress);
+        await Js.InvokeVoidAsync("layer.close", load);
         if (!execSuccess)
-            await js.InvokeVoidAsync("layer.alert", lstLog.ToString("<br />"), new
+            await Js.InvokeVoidAsync("layer.alert", lstLog.ToString("<br />"), new
             {
                 icon = 2,
                 title = "清除失败"
             });
         else
         {
-            await js.InvokeVoidAsync("layer.msg", "清除完毕", new
+            await Js.InvokeVoidAsync("layer.msg", "清除完毕", new
             {
                 icon = 1
             });
@@ -174,19 +176,19 @@
             lstLog.Add(log);
         });
 
-        var load = await js.InvokeAsync<int>("layer.load", 0, "{shade: false}");
-        var execSuccess = await _iocManager.Resolve<GitService>().CloneOrPull(git, progress, default);
-        await js.InvokeVoidAsync("layer.close", load);
+        var load = await Js.InvokeAsync<int>("layer.load", 0, "{shade: false}");
+        var execSuccess = await GitService.CloneOrPull(git, progress, default);
+        await Js.InvokeVoidAsync("layer.close", load);
 
         if (!execSuccess)
-            await js.InvokeVoidAsync("layer.alert", lstLog.ToString("<br />"), new
+            await Js.InvokeVoidAsync("layer.alert", lstLog.ToString("<br />"), new
             {
                 icon = 2,
                 title = "拉取失败"
             });
         else
         {
-            await js.InvokeVoidAsync("layer.alert", "拉取成功", new
+            await Js.InvokeVoidAsync("layer.alert", "拉取成功", new
             {
                 icon = 1,
                 title = "执行结果"
