--- a/01_Interfaces/FOPS.Blazor/Pages/k8s/tpl/Update.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/k8s/tpl/Update.razor
@@ -3,9 +3,10 @@
 @using FOPS.Domain.Build.Enum
 @using FOPS.Application.Build.YamlTpl.Entity
 @using FOPS.Application.Build.YamlTpl
-@inject IIocManager _iocManager;
-@inject NavigationManager nav;
-@inject IJSRuntime js;
+
+@inject NavigationManager Nav;
+@inject IJSRuntime Js;
+@inject YamlTplApp YamlTplApp;
 
 <div class="layui-card">
     <div class="layui-card-header">
@@ -78,7 +79,7 @@
     {
         if (Id < 1 || _info == null)
         {
-            await js.InvokeVoidAsync("layer.alert", "Yaml模板不存在", new
+            await Js.InvokeVoidAsync("layer.alert", "Yaml模板不存在", new
             {
                 icon = 2,
                 title = "出错了"
@@ -87,8 +88,8 @@
         }
         try
         {
-            await _iocManager.Resolve<YamlTplApp>().UpdateAsync(_info);
-            await js.InvokeVoidAsync("layer.msg", "修改成功", new
+            await YamlTplApp.UpdateAsync(_info);
+            await Js.InvokeVoidAsync("layer.msg", "修改成功", new
             {
                 icon = 1
             });
@@ -96,7 +97,7 @@
         }
         catch (Exception e)
         {
-            await js.InvokeVoidAsync("layer.alert", e.Message, new
+            await Js.InvokeVoidAsync("layer.alert", e.Message, new
             {
                 icon = 2,
                 title = "出错了"
@@ -108,7 +109,7 @@
     {
         if (Id < 1 || _info == null)
         {
-            await js.InvokeVoidAsync("layer.alert", "Yaml模板不存在", new
+            await Js.InvokeVoidAsync("layer.alert", "Yaml模板不存在", new
             {
                 icon = 2,
                 title = "出错了"
@@ -121,10 +122,10 @@
     {
         if (Id > 0 && _info.Id == 0)
         {
-            _info = await _iocManager.Resolve<YamlTplApp>().ToInfoAsync(Id);
+            _info = await YamlTplApp.ToInfoAsync(Id);
             if (_info == null)
             {
-                await js.InvokeVoidAsync("layer.alert", "Yaml模板不存在", new
+                await Js.InvokeVoidAsync("layer.alert", "Yaml模板不存在", new
                 {
                     icon = 2,
                     title = "出错了"
@@ -136,7 +137,7 @@
 
     private void GotoList()
     {
-        nav.NavigateTo("/k8s/tpl/list");
+        Nav.NavigateTo("/k8s/tpl/list");
     }
 
 }
