--- a/01_Interfaces/FOPS.Blazor/Pages/link_track/slow/Grpc.razor
+++ b/01_Interfaces/FOPS.Blazor/Pages/link_track/slow/Grpc.razor
@@ -8,9 +8,10 @@
 @using FS.Core
 @using FOPS.Application.Build.Project.Entity
 @using FOPS.Application.Build.Project
-@inject IIocManager _iocManager;
-@inject NavigationManager nav;
-@inject IJSRuntime js;
+
+@inject NavigationManager Nav;
+@inject IJSRuntime Js;
+@inject ProjectApp ProjectApp;
 
 <div class="layui-card">
     <div class="layui-card-header" id="anchor-play-header">
@@ -170,7 +171,7 @@
         if (PageIndex < 1) PageIndex = 1;
         _lastIndex = PageIndex;
 
-        _lstAppId = await _iocManager.Resolve<ProjectApp>().ToAppListAsync() ?? new();
+        _lstAppId = await ProjectApp.ToAppListAsync() ?? new();
         GetList();
     }
     private void GroupChange(ChangeEventArgs args)
@@ -216,7 +217,7 @@
 
         lstContent.Add($"<pre class='layui-code layui-box layui-code-view' style='font-size: 14px;'>{info.StartTs.ToTimestamps():yyyy-MM-dd HH:mm:ss} <strong class='layui-badge layui-bg-green'>Grpc =></strong> {info.GrpcUrl} {useTsHtml}</pre>");
 
-        await js.InvokeVoidAsync("layer.open", new
+        await Js.InvokeVoidAsync("layer.open", new
         {
             type = 1,
             skin = "layui-layer-molv",
