--- a/01_Interfaces/FOPS.Blazor/Shared/FssLog.razor
+++ b/01_Interfaces/FOPS.Blazor/Shared/FssLog.razor
@@ -2,10 +2,11 @@
 @using Microsoft.Extensions.Logging
 @using System.Timers
 @using FOPS.Application.Fss.Entity
-@inject IIocManager _iocManager;
-@inject NavigationManager nav;
-@inject IJSRuntime js;
-@inject Blazored.LocalStorage.ILocalStorageService storage;
+
+@inject NavigationManager Nav;
+@inject IJSRuntime Js;
+@inject IFssDevice FssDevice;
+@inject Blazored.LocalStorage.ILocalStorageService Storage;
 @implements IDisposable;
 
 
@@ -112,7 +113,7 @@
 
     private async Task GetList()
     {
-        var data = await _iocManager.Resolve<IFssDevice>().GetRunLogListAsync(storage.GetFssUrl(), null, null, PageSize, 1) ?? new PageList<RunLogDTO>(new(), 0);
+        var data = await FssDevice.GetRunLogListAsync(Storage.GetFssUrl(), null, null, PageSize, 1) ?? new PageList<RunLogDTO>(new(), 0);
         _lst = data.List;
     }
 
